# toy_calculator

./: Findopenssl.cmake  README.md
calculator_back-end/: CMakeLists.txt
calculator_back-end/include/: CalcResourceFactory.hpp  CalcService.hpp  CalcServiceSettingsFactory.hpp
calculator_front-end/src/: App.js  Calculator.js  CalculatorApi.js  CalculatorDisplay.js  CalculatorPanel.js
